Refactoriza functions.php: elimina duplicaciones de hooks y CPT, centraliza reescrituras/shortcodes y añade helper para sanitizar $_POST. Mejora la persistencia del inventario/hoja aplicando el helper y normalizando oro, armas y Ajax.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,22 @@ PHP/backup/functions.php
 PHP/backup/page-hoja-personaje.php
 PHP/backup/page-inventario-personaje.php
 PHP/backup/single-personaje.php
+stuff/ccsmovil.txt
+stuff/css medio bueno.txt
+stuff/css pergamin.txt
+stuff/functionsActual.txt
+stuff/ccsmovil.txt
+stuff/css medio bueno.txt
+stuff/css pergamin.txt
+stuff/functionsActual.txt
+stuff/hoja-personaje.js
+stuff/page-inventario-personaje.php
+stuff/PHP_BACKUP.txt
+stuff/promptLandingPage.txt
+stuff/promptPlayersPage.txt
+stuff/script primero.txt
+stuff/script.txt
+stuff/scriptblog.txt
+stuff/scriptextraccionbueno.txt
+stuff/scriptfaccion.txt
+stuff/wip.css
