chore: añade dnd-feats.json generado desde 5etools

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ stuff/scriptblog.txt
 stuff/scriptextraccionbueno.txt
 stuff/scriptfaccion.txt
 stuff/wip.css
+docs/Analisis Logica Hoja Personaje.pdf
